changed nearby stations
