# server/openapi.yaml
@@ -14,31 +14,27 @@ paths:
         - name: latitude
           in: query
           required: true
-          description: | 
-            ## Latitude of a Coordinate
+          description: Latitude of a Coordinate
           schema:
             type: number
             format: float
         - name: longitude
           in: query
           required: true
-          description: |
-            ## Longitude of a Coordinate
+          description: Longitude of a Coordinate
           schema:
             type: number
             format: float
         - name: filter
           in: query
           required: false
-          description: |
-            ## Crime Categories to filter by
+          description: Crime Categories to filter by
           schema:
             $ref: '#/components/schemas/Filter'
         - name: timeSpan
           in: query
           required: false
-          description: |
-            ## Time Span to filter Crime Occurences by
+          description: Time Span to filter Crime Occurences by
           schema:
             $ref: '#/components/schemas/Time Range'
 
@@ -66,26 +62,24 @@ paths:
         401:
           $ref: '#/components/responses/UnauthorizedError'
             
-  /stations/nearby:
+  /stations/nearby/all:
     get:
       parameters:
         - name: latitude
           in: query
           required: true
-          description: | 
-            ## Latitude of a Coordinate
+          description: Latitude of a Coordinate
           schema:
             type: number
             format: float
         - name: longitude
           in: query
           required: true
-          description: |
-            ## Longitude of a Coordinate
+          description: Longitude of a Coordinate
           schema:
             type: number
             format: float
-      operationId: server.routes.stations.nearby_stations
+      operationId: server.routes.stations.nearby_stations_all
       tags: 
         - Stations
       summary: List Subway Stations that are within 1/2 mile of a coordinate or the five nearest stations
@@ -116,6 +110,13 @@ paths:
                     format: float
                   frequencies:
                     $ref: '#/components/schemas/Frequencies'
+                  percentile:
+                    type: number
+                    format: float
+                  crimes:
+                    type: array
+                    items: 
+                      $ref: '#/components/schemas/Crime'
         401:
           $ref: '#/components/responses/UnauthorizedError'
 
